tests/snapshots/error-parser-type_hints-float-not_f32_recovers.snap
---
source: tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class @float "not a float"
unexpected_token ; <- this error should be reported as well
----- STDERR -----
[E-003] Error: '@float' requires a 32-bit float, but 'not a float' is not a number
   ╭─[ test_data/integration/error/parser/type_hints/float/not_f32_recovers.rns:1:8 ]
   │
 1 │ .class @float "not a float"
   │        ───┬── ──────┬──────  
   │           ╰────────────────── forces explicit float constant pool type
   │                     │        
   │                     ╰──────── 'not a float' is not a number
   │ 
   │ Help: 'not a float' is not a valid float literal.
   │       
   │       Syntax:
   │       @float <float>
   │       
   │       For example:
   │       @float 3.14
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-003
───╯
[E-007] Error: unexpected identifier class body
   ╭─[ test_data/integration/error/parser/type_hints/float/not_f32_recovers.rns:2:1 ]
   │
 2 │ unexpected_token ; <- this error should be reported as well
   │ ────────┬───────  
   │         ╰───────── unexpected token
   │ 
   │ Help: Check the syntax of the class body and ensure all tokens are valid.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-007
───╯
----- HASH -----
not generated
