tests/snapshots/error-parser-type_hints-int-not_i32_recovers.snap
---
source: tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class @int "not an int"
unexpected_token ; <- this error should be reported as well
----- STDERR -----
[E-003] Error: '@int' requires a 32-bit integer, but 'not an int' is not a number
   ╭─[ test_data/integration/error/parser/type_hints/int/not_i32_recovers.rns:1:8 ]
   │
 1 │ .class @int "not an int"
   │        ──┬─ ──────┬─────  
   │          ╰──────────────── forces explicit integer constant pool type
   │                   │       
   │                   ╰─────── 'not an int' is not a number
   │ 
   │ Help: 'not an int' is not a valid integer literal.
   │       
   │       Syntax:
   │       @int <integer>
   │       
   │       For example:
   │       @int 42
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-003
───╯
[E-007] Error: unexpected identifier class body
   ╭─[ test_data/integration/error/parser/type_hints/int/not_i32_recovers.rns:2:1 ]
   │
 2 │ unexpected_token ; <- this error should be reported as well
   │ ────────┬───────  
   │         ╰───────── unexpected token
   │ 
   │ Help: Check the syntax of the class body and ensure all tokens are valid.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-007
───╯
----- HASH -----
not generated
