tests/snapshots/error-parser-type_hints-int-overflow_recovers.snap
---
source: tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class @int 99999999999
unexpected_token ; <- this error should be reported as well
----- STDERR -----
[E-003] Error: '@int' requires a 32-bit integer, but '99999999999' is out of range
   ╭─[ test_data/integration/error/parser/type_hints/int/overflow_recovers.rns:1:8 ]
   │
 1 │ .class @int 99999999999
   │        ──┬─ ─────┬─────  
   │          ╰─────────────── forces explicit integer constant pool type
   │                  │       
   │                  ╰─────── 32-bit integer range is -2147483648 to 2147483647
   │ 
   │ Help: If you need a larger integer, use @long instead:
   │       @long 99999999999
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-003
───╯
[E-007] Error: unexpected identifier class body
   ╭─[ test_data/integration/error/parser/type_hints/int/overflow_recovers.rns:2:1 ]
   │
 2 │ unexpected_token ; <- this error should be reported as well
   │ ────────┬───────  
   │         ╰───────── unexpected token
   │ 
   │ Help: Check the syntax of the class body and ensure all tokens are valid.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-007
───╯
----- HASH -----
not generated
