tests/snapshots/error-parser-type_hints-long-not_i64_recovers.snap
---
source: tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class @long "not a long"
unexpected_token ; <- this error should be reported as well
----- STDERR -----
[E-003] Error: '@long' requires a 64-bit integer, but 'not a long' is not a number
   ╭─[ test_data/integration/error/parser/type_hints/long/not_i64_recovers.rns:1:8 ]
   │
 1 │ .class @long "not a long"
   │        ──┬── ──────┬─────  
   │          ╰───────────────── forces explicit long constant pool type
   │                    │       
   │                    ╰─────── 'not a long' is not a number
   │ 
   │ Help: 'not a long' is not a valid integer literal.
   │       
   │       Syntax:
   │       @long <long>
   │       
   │       For example:
   │       @long 100000
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-003
───╯
[E-007] Error: unexpected identifier class body
   ╭─[ test_data/integration/error/parser/type_hints/long/not_i64_recovers.rns:2:1 ]
   │
 2 │ unexpected_token ; <- this error should be reported as well
   │ ────────┬───────  
   │         ╰───────── unexpected token
   │ 
   │ Help: Check the syntax of the class body and ensure all tokens are valid.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-007
───╯
----- HASH -----
not generated
